# pyintents

./: .gitignore  CHANGELOG.md  README.md  example.py  example0.py  example1.py  example2.py  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  doc_request.yml
.github/workflows/: changelog.yml  docs.yml  publish.yml  python-package.yml
docs/: conf.py  index.rst  poly.py
docs/_templates/: versioning.html
docs/source/: index.rst
src/pyintents/: __init__.py  exceptions.py  introspect.py  namespace.py
tests/: conftest.py  test_exceptions.py  test_integration.py  test_introspect.py  test_namespace.py
